[package]
name = "pylade_clicker"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
rand = "0.8"
rdev = "0.5"
crossterm = "0.27"
ico = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp"
] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = "symbols"
